fix card overflow

--- a/print_view.css
+++ b/print_view.css
@@ -66,7 +66,7 @@ div {
     background-color: rgb(255,192,192);
 }
 
-.cardID, .labels, .epic {
+.cardID, .labels, .epic, .owner {
     float: left;
     width: 78%;
 }
@@ -82,6 +82,10 @@ div {
     font-style: oblique;
 }
 
+.descriptionArea {
+    max-height: 208px;
+    overflow: hidden;
+}
 .title {
     font-weight: bold;
     font-size: 20px;
